samples/_failures_safe/1761502492_e7855e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b139ccd.c: In function ‘create_parser_node’:
./samples/SAFE/__tmp_0b139ccd.c:154:9: error: expected ‘;’ at end of input
  154 |     node
      |         ^
      |         ;
./samples/SAFE/__tmp_0b139ccd.c:154:5: error: expected declaration or statement at end of input
  154 |     node
      |     ^~~~
